# apps/api/src/shared/docs/openapi.yml
@@ -489,7 +489,7 @@ paths:
     get:
       summary: Obtiene todas las reservas de un arrendador
       tags:
-        - Booking
+        - Bookings
       security:
         - BearerAuth: []
       parameters:
@@ -516,9 +516,43 @@ paths:
                   $ref: '#/components/schemas/BookingResponse'
         '401':
           description: Unauthorized
-
+  /api/booking/tenant:
+    get:
+      summary: Obtiene todas las reservas de un inquilino
+      tags:
+        - Bookings
+      security:
+        - cookieAuth: []
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 10
+      responses:
+        '200':
+          description: Reservas obtenidas correctamente
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/BookingResponse'
+        '401':
+          description: Unauthorized
 components:
   securitySchemes:
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: access_token
     BearerAuth:
       type: http
       scheme: bearer
